syntax = "proto3";

package com.neckcode.grpcproto;

option java_multiple_files = true;

message HelloServicesRequest{
  string message = 1;
  string name = 2;
}

message HelloServicesResponse{
  string message = 1;
}

service HelloServices {
  rpc HelloService(HelloServicesRequest) returns (HelloServicesResponse);
}